# src/routes/agent.routes.ts
@@ -1,25 +1,30 @@
 import express from 'express';
+import { validate } from '../middleware/validate';
 import {
     getMeHandler,
     getAgentsHandler,
     getAgentHandler,
-    getAgentsByPageHandler
+    getAgentsByPageHandler,
+    updateAgentHandler
 } from '../controllers/agent.controller';
 import {
     auth,
     adminAuth
 } from '../middleware/auth';
+import {
+  updateAgentSchema
+} from '../schemas/agent.schema';
+
 import { requireUser } from '../middleware/requireUser';
 
 const agentRouter = express.Router();
 
-// agentRouter.use(deserializeUser, requireUser);
-// the base variable is for purposes of swagger compilation, 
-// it should always be an empty string but api/agent when auto compiling swagger
 const base = ""
-agentRouter.get('/', auth, getAgentsHandler);
-agentRouter.get('/:pageNo', getAgentsByPageHandler);
+
+agentRouter.get(base+'/', auth, getAgentsHandler);
+agentRouter.get(base+'/:pageNo', getAgentsByPageHandler);
 agentRouter.get(base+'/:id', auth, requireUser, adminAuth, getAgentHandler);
 agentRouter.get('/me', auth, getMeHandler);
+agentRouter.patch(base+'/update/:id', validate(updateAgentSchema), auth, updateAgentHandler );
 
 export default agentRouter;
